@@ -1,3 +1,7 @@
+2014-07-11  Jean Delvare  <jdelvare@suse.de>
+
+	* dmidecode.c: Decode the CPUID of recent AMD processors (DMI type 4).
+
 2014-03-20  Jean Delvare  <jdelvare@suse.de>
 
 	* dmidecode.c: Let legacy_decode be quiet in dump mode too.
